--- a/auth-api/package.json
+++ b/auth-api/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^10.3.8",
+    "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/microservices": "^10.3.8",
